--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 Remember me</label>
                 <a href="#">Forgot Password?</a>
             </div>
-            <button type="submit" class="btn">Login</button>
+            <button type="submit" class="loginbutton">Login</button>
             <div class="login-register">
                 <p>Don`t have an account? <a
                      href="#" class="register-link">Register</a></p>
