--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <a href="#">About</a>
         <a href="#">Service</a>
         <a href="#">Contact</a>
-        <button class="btnLogin-popup">Login</button>
+        <button class="loginbutton-popup">Login</button>
     </nav>
 </header> 
 
@@ -22,6 +22,7 @@
     <span class="icon-close">
         <ion-icon name="close"></ion-icon>
     </span>
+
     <div class="form-box login">
         <h2>Login</h2>
         <form action="#">
@@ -40,18 +41,51 @@
                 <label>Password</label>
             </div>            
             <div class="remember-forgot">
-                <label><input type="checkbox">
-                Remember me</label>
+                <label><input type="checkbox"> Remember me</label>
                 <a href="#">Forgot Password?</a>
             </div>
             <button type="submit" class="loginbutton">Login</button>
             <div class="login-register">
-                <p>Don`t have an account? <a
-                     href="#" class="register-link">Register</a></p>
+                <p>Don't have an account? <a href="#" class="register-link">Register</a></p>
             </div>
         </form>
     </div> 
+
+    <div class="form-box register">
+        <h2>Registration</h2>
+        <form action="#">
+            <div class="input-box">
+                <span class="icon">
+                    <ion-icon name="person"></ion-icon>
+                </span>
+                <input type="text" required>
+                <label>Username</label>
+            </div>
+            <div class="input-box">
+                <span class="icon">
+                    <ion-icon name="mail"></ion-icon>
+                </span>
+                <input type="email" required>
+                <label>Email</label>
+            </div>
+            <div class="input-box">
+                <span class="icon">
+                    <ion-icon name="lock-closed"></ion-icon>
+                </span>
+                <input type="password" required>
+                <label>Password</label>
+            </div>            
+            <div class="remember-forgot">
+                <label><input type="checkbox"> I agree to the terms & conditions</label>
+            </div>
+            <button type="submit" class="loginbutton">Register</button>
+            <div class="login-register">
+                <p>Already have an account? <a href="#" class="login-link">Login</a></p>
+            </div>
+        </form>
+    </div>            
 </div>
+
 <script src="scripts.js"></script>
 <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
