--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+<div id="preloader">
+    <div class="preloader-content">
+        <h1 class="logo-animation">MIW</h1>
+        <div class="tagline">
+            <span class="word">Inspire.</span>
+            <span class="word">Imagine.</span>
+            <span class="word">Innovate.</span>
+        </div>
+    </div>
+</div>
+
 <header>
     <h1 class="logo"><span class="mi">MI</span><span class="main-letter">W</span><span class="second-half">ovie</span></h1>
     <nav class="navigation">
@@ -86,7 +98,8 @@
     </div>            
 </div>
 
-<script src="scripts.js"></script>
+<script src="scripts.js" defer></script>
+
 <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 
