--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
     <div class="form-box login">
         <h2>Login</h2>
-        <form action="#">
+        <form action="login.php" method="POST">
             <div class="input-box">
                 <span class="icon">
                     <ion-icon name="mail"></ion-icon>
@@ -65,26 +65,26 @@
 
     <div class="form-box register">
         <h2>Registration</h2>
-        <form action="#">
+        <form action="register.php" method="POST">
             <div class="input-box">
                 <span class="icon">
                     <ion-icon name="person"></ion-icon>
                 </span>
-                <input type="text" required>
+                <input type="text" name="username" required>
                 <label>Username</label>
             </div>
             <div class="input-box">
                 <span class="icon">
                     <ion-icon name="mail"></ion-icon>
                 </span>
-                <input type="email" required>
+                <input type="email" name="email" required>
                 <label>Email</label>
             </div>
             <div class="input-box">
                 <span class="icon">
                     <ion-icon name="lock-closed"></ion-icon>
                 </span>
-                <input type="password" required>
+                <input type="password" name="password" required>
                 <label>Password</label>
             </div>            
             <div class="remember-forgot">
